kubernetes/heimdall/base/statefulset.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: heimdall
  namespace: heimdall
  labels:
    app: heimdall
    app.kubernetes.io/instance: heimdall
  annotations:
    checkov.io/skip1: CKV_K8S_40=OpenShift Injects Random UID
    checkov.io/skip2: CKV_K8S_37=Not Supported
    checkov.io/skip3: CKV_K8S_20=Not Supported
    checkov.io/skip4: CKV_K8S_23=Not Supported
    checkov.io/skip5: CKV_K8S_22=Not Supported
    checkov.io/skip6: CKV_K8S_16=Not Supported
    checkov.io/skip7: CKV_K8S_43=Sha Changes Often
    checkov.io/skip8: CKV_K8S_17=https://github.com/linuxserver/docker-heimdall/issues/115
    gitops-ci.k8s.io/exempt-image-checksum: "docker.io/linuxserver/heimdall"
spec:
  replicas: 1
  serviceName: heimdall-service
  selector:
    matchLabels:
      app: heimdall
  revisionHistoryLimit: 0
  template:
    metadata:
      labels:
        app: heimdall
      annotations:
        enable.version-checker.io/heimdall: "true"
        pin-major.version-checker.io/heimdall: "2"
        seccomp.security.alpha.kubernetes.io/defaultProfileName: "runtime/default"
    spec:
      automountServiceAccountToken: false
      serviceAccountName: heimdall-sa
      securityContext:
        seccompProfile:
          type: RuntimeDefault
        runAsNonRoot: false
      containers:
        # renovate: datasource=docker depName=docker.io/linuxserver/heimdall
        - image: docker.io/linuxserver/heimdall:2.8.3
          imagePullPolicy: Always # Temp
          name: heimdall
          securityContext:
            runAsNonRoot: false
            privileged: true
            allowPrivilegeEscalation: true
            readOnlyRootFilesystem: false # true
            seccompProfile:
              type: RuntimeDefault
            capabilities:
              drop:
                - NET_RAW
          ports:
            - containerPort: 80
              name: http-80
              protocol: TCP
            - containerPort: 443
              name: https-443
              protocol: TCP
          resizePolicy:
            - resourceName: cpu
              restartPolicy: NotRequired
            - resourceName: memory
              restartPolicy: NotRequired
          resources:
            requests:
              memory: "128Mi"
              cpu: "10m"
            limits:
              memory: "256Mi"
              cpu: "300m"
          volumeMounts:
            - mountPath: /config
              name: heimdall-pvc
          livenessProbe:
            tcpSocket:
              port: http-80
            initialDelaySeconds: 0
            failureThreshold: 3
            timeoutSeconds: 1
            periodSeconds: 10
          readinessProbe:
            tcpSocket:
              port: http-80
            initialDelaySeconds: 0
            failureThreshold: 3
            timeoutSeconds: 1
            periodSeconds: 10
          startupProbe:
            tcpSocket:
              port: http-80
            initialDelaySeconds: 0
            failureThreshold: 30
            timeoutSeconds: 1
            periodSeconds: 5
      hostname: heimdall
      schedulerName: default-scheduler
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      volumes:
        - name: heimdall-pvc
          persistentVolumeClaim:
            claimName: heimdall
      enableServiceLinks: false
