kubernetes/heimdall/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: heimdall
  namespace: heimdall
  labels:
    app.kubernetes.io/instance: heimdall
spec:
  selector:
    app: heimdall
  type: ClusterIP
  clusterIP: None
  ports:
    - name: http-80
      protocol: TCP
      port: 80
      targetPort: http-80
    - name: https-443
      protocol: TCP
      port: 443
      targetPort: https-443
